<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inches" />

            <EditText
                android:id="@+id/inputText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_distance"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/toMeters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_meters" />

            <RadioButton
                android:id="@+id/toFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_feet" />

            <RadioButton
                android:id="@+id/toMiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_miles" />

            <RadioButton
                android:id="@+id/clearAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_all" />
        </RadioGroup>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>